Update chat session api